# capybara-vibe

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPER.md  FIXES_SUMMARY.md  GUIDE.md  Guide.md  LOGGING_IMPLEMENTATION.md  README.md  SIMPLIFIED_PHASE1_SUMMARY.md  TEST_RESULTS.md  brainstorm.md  capybara.spec  claude_code_theme.txt  current_expect.txt  debug_tools.py  expectation.txt  marketing.md  pyproject.toml  repomix-output.xml  test_fix.py  test_sub_agent.py
.github/workflows/: deploy.yml
docs/: COMPLETION_SUMMARY.md  DOCUMENTATION_UPDATE_FINAL.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_REPORT.txt  PHASE3-IMPLEMENTATION-REPORT.md  PHASE3_COMPLETION_SUMMARY.md  README-OLD.md  README.md  codebase-summary.md  delegation-api-guide.md  execution-tracking.md  failure-recovery-guide.md  multi-agent-architecture.md  project-overview-pdr.md  project-roadmap.md
docs/implementation-reports/: multi-agent-enhancements-phases-1-2.md  phase3-ui-communication-flow.md
docs/tmp/: AGENT_UI_CODE_EXAMPLES.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_PROGRESS_REPORT_FINAL.txt  DELIVERY-COMPLETE.txt  DELIVERY_CHECKLIST.md  DELIVERY_SUMMARY.txt  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_STATUS.txt  FINAL-DELIVERY-REPORT.txt  FINAL_DELIVERY_SUMMARY.txt  IMPLEMENTATION_COMPLETE.txt  INDEX.md  MULTI_AGENT_PROGRESS_SUMMARY.md  MULTI_AGENT_UI_UX_RESEARCH.md  MULTI_AGENT_UPDATE_SUMMARY.md  PHASE3-COMPLETION-SUMMARY.md  PHASE3_DOCUMENTATION_COMPLETE.md  PHASE_1_2_COMPLETION_REPORT.md  PLAN_UPDATE_SUMMARY.txt  PROGRESS_REPORT_SUMMARY.md  PROJECT-COMPLETION-STATUS.md  README_PROGRESS_CHECKPOINT.md  RELEASE-v1.0.0-READY.md  REPORTS-INDEX.md  REPORT_DELIVERY_COMPLETE.txt  REPORT_SUMMARY.md  START_HERE.md  START_READING_HERE.md  coverage.json
plans/20251225-1200-capybara-system-architecture/: plan.md
plans/20251225-1200-capybara-system-architecture/research/: README.md  claude-code-tool-patterns.md  cli-frameworks.md  litellm-patterns.md  mcp-integration.md
plans/20251225-1200-capybara-system-architecture/scout/: claude-code-tool-patterns.md
plans/20251226-0048-capybara-improvements/: plan.md
reference-mistral-vibe-cli/: agent_architecture.md  edit_tool.py  todo_list.md
reference_opencode/: todo-delegation.md
scripts/: build_release.sh  migrate_session_schema.py  package_binaries.sh  test_logging_demo.py
src/capybara/: __init__.py  __main__.py
src/capybara/cli/: interactive.py  main.py
src/capybara/core/: __init__.py  agent.py  agent_status.py  child_errors.py  config.py  context.py  logging.py  prompts.py  safety.py  session_manager.py  streaming.py
src/capybara/core/agent/: __init__.py  agent.py  state_manager.py  status.py  ui_renderer.py
src/capybara/core/config/: __init__.py  litellm_config.py  safety.py  settings.py
src/capybara/core/delegation/: __init__.py  child_errors.py  delegation_decider.py  event_bus.py  session_manager.py
src/capybara/core/execution/: __init__.py  execution_log.py  streaming.py  tool_executor.py
src/capybara/core/logging/: __init__.py  api_logger.py  error_logger.py  event_logger.py  session_logger.py
src/capybara/core/utils/: __init__.py  context.py  interrupts.py  prompts.py
src/capybara/memory/: storage.py  window.py
src/capybara/providers/: router.py
src/capybara/tools/: base.py  registry.py
src/capybara/tools/builtin/: __init__.py  bash.py  delegate.py  diff_formatter.py  filesystem.py  search.py  search_replace.py  todo.py  todo_state.py
src/capybara/tools/builtin/delegation/: __init__.py  agent_setup.py  error_handler.py  failure_analysis.py  progress_display.py  sub_agent_tool.py  success_handler.py  work_report.py
src/capybara/tools/mcp/: __init__.py  bridge.py  client.py
src/capybara/ui/: __init__.py  diff_renderer.py  flow_renderer.py  todo_live_panel.py  todo_panel.py
src/capybara/web/: __init__.py  routes.py  server.py  transformers.py
src/capybara/web/static/: index.html
src/capybara_vibe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/capybara_vibe_coding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_api_logging.py  test_child_errors.py  test_delegate_tool.py  test_delegation_decider.py  test_diff_renderer.py  test_event_bus.py  test_execution_log.py  test_logging.py  test_memory.py  test_phase3_ui_flow.py  test_placeholder.py  test_registry.py  test_sequential_todo_execution.py  test_session_manager.py  test_storage.py  test_todo_state.py  test_tool_executor_diff_display.py  test_tool_filtering.py
tests/integration/: test_delegation_flow.py  test_e2e_multi_agent.py  test_todo_workflow.py
tests/ui/: test_todo_panel.py
tests/web/: __init__.py  test_transformers.py
