[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capybara-vibe-coding"
version = "0.1.0"
description = "AI-powered coding assistant CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CapybaraVibeCoding Team" }
]
keywords = ["ai", "cli", "coding-assistant", "llm", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "litellm>=1.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.36",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "tiktoken>=0.5.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = ["capybara-vibe-coding[mcp,dev]"]

[project.scripts]
capybara = "capybara.cli.main:cli"

[project.urls]
Homepage = "https://github.com/capybara-vibe-coding/capybara"
Documentation = "https://github.com/capybara-vibe-coding/capybara#readme"
Repository = "https://github.com/capybara-vibe-coding/capybara"
Issues = "https://github.com/capybara-vibe-coding/capybara/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/capybara"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=capybara --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
